--- a/src/components/questionForm/styles.css
+++ b/src/components/questionForm/styles.css
@@ -1,8 +1,73 @@
 .form-container {
   width: 100vw;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-container label {
+  display: inline-block;
+  background-color: #ddd;
+  padding: 1vh 2vh;
+  font-family: sans-serif, Arial;
+  font-size: 3vh;
+  text-transform: capitalize;
+  border: 2px solid #444;
+  border-radius: 4px;
+  width: 50vh;
+  height: 10vh;
+  margin: 1vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.form-container label:hover {
+background-color: #dfd;
+}
+
+.form-container input[type="radio"]:focus + label {
+  border: 2px dashed #444;
+}
+
+.form-container input[type="radio"]:checked + label {
+  background-color: #bfb;
+  border-color: #4c4;
+}
+
+.form-container input[type="radio"] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
+}
+
+.result-container {
+  position: absolute;
+  top: 5vh;
+  right: 5vh;
+  width: 30vh;
+  height: 6vh;
+  font-size: 1vh;
+  background-color: grey;
+
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
 .form--submit{
   display: none;
 }
+
+@-webkit-keyframes fadeIn {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+  }
+  @keyframes fadeIn {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+  } 
