--- a/src/components/game/styles.css
+++ b/src/components/game/styles.css
@@ -3,3 +3,14 @@
   width: 100%;
   height: 100vh;
 }
+
+.game-back__button {
+  position: absolute;
+  top: 1vh;
+  right: 2vh;
+}
+
+.game-back__button img {
+  height: 6vh;
+  rotate: 180deg;
+}
