--- a/src/components/questionForm/styles.css
+++ b/src/components/questionForm/styles.css
@@ -103,7 +103,7 @@
   margin-top: auto;
   margin-bottom: 3vh;
   background-color: #ff6d24;
-  color: #e2ded3;
+  color: #212121;
   border: none;
   cursor: pointer;
   text-transform: capitalize;
